--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@blog/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "all": "nx run-many --parallel --target=serve --projects=frontend,server"
+  },
   "private": true,
   "dependencies": {
     "@analogjs/content": "^1.2.0",
@@ -17,18 +19,34 @@
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
+    "@nestjs/common": "^10.0.2",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.0.2",
+    "@nestjs/mapped-types": "*",
+    "@nestjs/platform-express": "^10.0.2",
+    "@nestjs/typeorm": "^10.0.2",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
+    "@popperjs/core": "^2.11.8",
     "@trpc/client": "^10.25.0",
     "@trpc/server": "^10.25.0",
+    "axios": "^1.6.0",
+    "bootstrap": "^5.3.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
+    "esbuild": "^0.19.12",
     "front-matter": "^4.0.2",
     "isomorphic-fetch": "^3.0.0",
     "marked": "^5.0.2",
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
+    "pg": "^8.11.5",
     "prismjs": "^1.29.0",
-    "rxjs": "~7.5.6",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.8.0",
     "superjson": "^2.2.1",
     "tslib": "^2.4.0",
+    "typeorm": "^0.3.20",
     "zod": "^3.21.4",
     "zone.js": "~0.14.0"
   },
@@ -37,16 +55,41 @@
     "@analogjs/vite-plugin-angular": "^1.2.0",
     "@angular-devkit/build-angular": "^17.2.0",
     "@angular/compiler-cli": "^17.2.0",
-    "@nx/angular": "^18.0.0",
-    "@nx/devkit": "^18.0.0",
-    "@nx/eslint": "^18.0.0",
-    "@nx/vite": "^18.0.0",
+    "@angular/localize": "^17.2.0",
+    "@nestjs/schematics": "^10.0.1",
+    "@nestjs/testing": "^10.0.2",
+    "@nx/angular": "19.0.4",
+    "@nx/devkit": "19.0.4",
+    "@nx/eslint": "19.0.4",
+    "@nx/eslint-plugin": "19.0.4",
+    "@nx/jest": "19.0.4",
+    "@nx/js": "19.0.4",
+    "@nx/nest": "19.0.4",
+    "@nx/node": "19.0.4",
+    "@nx/vite": "19.0.4",
+    "@nx/web": "19.0.4",
+    "@nx/webpack": "19.0.4",
     "@nx/workspace": "19.0.4",
+    "@swc-node/register": "~1.8.0",
+    "@swc/core": "~1.3.85",
+    "@swc/helpers": "~0.5.2",
+    "@types/jest": "^29.4.0",
+    "@types/node": "~18.16.9",
+    "@typescript-eslint/eslint-plugin": "^7.3.0",
+    "@typescript-eslint/parser": "^7.3.0",
+    "eslint": "~8.57.0",
+    "eslint-config-prettier": "^9.0.0",
+    "jest": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "jsdom": "^22.1.0",
     "nx": "19.0.4",
+    "prettier": "^2.6.2",
+    "ts-jest": "^29.1.0",
+    "ts-node": "10.9.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.0",
     "vite-tsconfig-paths": "^4.2.0",
-    "vitest": "^1.3.1"
+    "vitest": "^1.3.1",
+    "webpack-cli": "^5.1.4"
   }
 }
