--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "all": "nx run-many --parallel --target=serve --projects=frontend,server"
+    "all": "nx run-many --target=serve --projects=server,frontend"
   },
   "private": true,
   "dependencies": {
@@ -40,6 +40,7 @@
     "marked-gfm-heading-id": "^3.1.0",
     "marked-highlight": "^2.0.1",
     "mermaid": "^10.2.4",
+    "ngx-toastr": "^18.0.0",
     "pg": "^8.11.5",
     "prismjs": "^1.29.0",
     "reflect-metadata": "^0.1.13",
